Add metric progress optimization modes
